[gd_scene load_steps=48 format=3 uid="uid://dvbdiuxk4fgdr"]

[ext_resource type="Script" uid="uid://b3aqie5o2wfgg" path="res://source/actors/player_fighting/player_fighting.gd" id="1_4la4e"]
[ext_resource type="Texture2D" uid="uid://d4jdx1gv4jkoa" path="res://assets/tileset/actors/player/main_player_cleaning_sim.png" id="1_ptxyl"]
[ext_resource type="Script" uid="uid://b7s38vslvahat" path="res://source/actors/player_fighting/animation_man.gd" id="2_86dqb"]
[ext_resource type="Script" uid="uid://413f1tsl2s8o" path="res://source/scripts/classes/attack_man.gd" id="2_iiaea"]
[ext_resource type="Script" uid="uid://s11lqklho0dt" path="res://source/scripts/classes/health_man.gd" id="2_n0ykg"]

[sub_resource type="Animation" id="Animation_vro5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sve6j"]
resource_name = "damaged"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bml6i"]
_data = {
&"RESET": SubResource("Animation_vro5r"),
&"damaged": SubResource("Animation_sve6j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xh6ve"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24lv3"]
size = Vector2(29.25, 27)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tjhi7"]
animation = &"attack_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fsf07"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tq8h3"]
animation = &"attack_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ptn62"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_g00ng"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tjhi7")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fsf07")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_tq8h3")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ptn62")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tdn3x"]
animation = &"idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vintr"]
animation = &"idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_islu5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bsnm6"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_t8gnc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tdn3x")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vintr")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_islu5")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_bsnm6")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tpuu4"]
animation = &"walk_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fd378"]
animation = &"walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0mdl7"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7fy03"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_vlfao"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tpuu4")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fd378")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0mdl7")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_7fy03")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_voj30"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_301yl"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gvcke"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1mgbv"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_33w8w"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_od0qe"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o3f6d"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iepvj"]
states/attack/node = SubResource("AnimationNodeBlendSpace2D_g00ng")
states/attack/position = Vector2(480, 233)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_t8gnc")
states/idle/position = Vector2(365, 100)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_vlfao")
states/walk/position = Vector2(612, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_voj30"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_301yl"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_gvcke"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_1mgbv"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_33w8w"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_od0qe"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_o3f6d")]
graph_offset = Vector2(-42, 47)

[sub_resource type="Animation" id="Animation_35xgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [784]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attacK_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [888]
}

[sub_resource type="Animation" id="Animation_1rik2"]
resource_name = "attack_back"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [790, 791, 792, 793, 794, 795]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attacK_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [870, 871, 872, 873, 874, 875]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_man")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_27npb"]
resource_name = "attack_front"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [802, 803, 804, 805, 806, 807]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attacK_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [882, 883, 884, 885, 886, 887]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_man")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_m30j8"]
resource_name = "attack_left"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [796, 797, 798, 799, 800, 801]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attacK_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [876, 877, 878, 879, 880, 881]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_man")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_lf808"]
resource_name = "attack_right"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [784, 785, 786, 787, 788, 789]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attacK_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [864, 865, 866, 867, 868, 869]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_man")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_a4lfd"]
resource_name = "idle_back"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [62, 63, 64, 65, 66, 67]
}

[sub_resource type="Animation" id="Animation_ef077"]
resource_name = "idle_front"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_riq52"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73]
}

[sub_resource type="Animation" id="Animation_r4au4"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_c47nd"]
resource_name = "walk_back"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [118, 119, 120, 121, 122, 123]
}

[sub_resource type="Animation" id="Animation_ooa3m"]
resource_name = "walk_front"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [130, 131, 132, 133, 134, 135]
}

[sub_resource type="Animation" id="Animation_6qgr8"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [124, 125, 126, 127, 128, 129]
}

[sub_resource type="Animation" id="Animation_hk0ek"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("charactersprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ioth0"]
_data = {
&"RESET": SubResource("Animation_35xgr"),
&"attack_back": SubResource("Animation_1rik2"),
&"attack_front": SubResource("Animation_27npb"),
&"attack_left": SubResource("Animation_m30j8"),
&"attack_right": SubResource("Animation_lf808"),
&"idle_back": SubResource("Animation_a4lfd"),
&"idle_front": SubResource("Animation_ef077"),
&"idle_left": SubResource("Animation_riq52"),
&"idle_right": SubResource("Animation_r4au4"),
&"walk_back": SubResource("Animation_c47nd"),
&"walk_front": SubResource("Animation_ooa3m"),
&"walk_left": SubResource("Animation_6qgr8"),
&"walk_right": SubResource("Animation_hk0ek")
}

[node name="player_fighting" type="CharacterBody2D" node_paths=PackedStringArray("health_manager") groups=["figher", "fighter"]]
z_index = 1
script = ExtResource("1_4la4e")
speed = 200.0
health_manager = NodePath("HealthManager")

[node name="HealthManager" type="Node" parent="."]
script = ExtResource("2_n0ykg")
health = 5

[node name="attack_man" type="Node" parent="." node_paths=PackedStringArray("animation_man")]
script = ExtResource("2_iiaea")
damage = 1
animation_man = NodePath("../animation_man")

[node name="animation_man" type="Node" parent="." node_paths=PackedStringArray("player_fighting", "attack_manager")]
script = ExtResource("2_86dqb")
player_fighting = NodePath("..")
attack_manager = NodePath("../attack_man")

[node name="charactersprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
texture = ExtResource("1_ptxyl")
hframes = 56
vframes = 20
frame = 784

[node name="AnimationPlayer" type="AnimationPlayer" parent="charactersprite"]
libraries = {
"": SubResource("AnimationLibrary_bml6i")
}

[node name="attacK_sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
texture = ExtResource("1_ptxyl")
hframes = 56
vframes = 20
frame = 888

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["actors"]]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_xh6ve")

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_24lv3")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_iepvj")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/blend_position = Vector2(-0.0047695, -0.0088495)
parameters/idle/blend_position = Vector2(-0.987281, 0.00398397)
parameters/walk/blend_position = Vector2(-0.976153, -0.00398409)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ioth0")
}

[connection signal="animation_finished" from="charactersprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="attack_area" to="attack_man" method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="attack_man" method="_on_attack_area_body_exited"]
